[gd_scene load_steps=15 format=3 uid="uid://b3o5imlvn5edd"]

[ext_resource type="Script" path="res://Scripts/EndGame.gd" id="1_ks8s6"]
[ext_resource type="FontFile" uid="uid://diip8i0gu0qq6" path="res://Assets/Fonts/Azonix.otf" id="1_pp10f"]
[ext_resource type="Texture2D" uid="uid://bqb07vqxtruci" path="res://Assets/Images/exit_button.png" id="3_eb31i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bhj0i"]
bg_color = Color(0.27451, 0.560784, 0.635294, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 1)
shadow_size = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ss54k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sgda1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s03p5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7piaw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_34ryl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hjacj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bbnwy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ph0i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ki0r3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kgnau"]

[node name="EndGame" type="ColorRect"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.709804)
script = ExtResource("1_ks8s6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bhj0i")

[node name="PlayAgainButton" type="Button" parent="."]
process_mode = 2
custom_minimum_size = Vector2(150, 60)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -130.5
offset_top = -585.0
offset_right = 130.5
offset_bottom = -525.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.32549, 1, 0.298039, 1)
theme_override_colors/font_hover_color = Color(0.32549, 1, 0.298039, 1)
theme_override_fonts/font = ExtResource("1_pp10f")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_ss54k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sgda1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_s03p5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7piaw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_34ryl")
text = "Play Again"

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_pp10f")
theme_override_font_sizes/font_size = 30
text = "You completed the puzzle in 3 seconds and made 3 moves"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 60.0
offset_top = 60.0
offset_right = 142.0
offset_bottom = 135.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_hjacj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bbnwy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3ph0i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ki0r3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kgnau")
icon = ExtResource("3_eb31i")

[connection signal="pressed" from="PlayAgainButton" to="." method="_On_PlayAgainButton_Pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_On_ExitButton_Pressed"]
